--- a/index.ipynb
+++ b/index.ipynb
@@ -19,12 +19,85 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "#%reload_ext autoreload"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from guest import Guest\n",
+    "from invite import Invite\n",
+    "from dinnerparty import DinnerParty\n",
+    "from recipe import Recipe\n",
+    "from review import Review\n",
+    "from course import Course"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Objectives\n",
     "* Define classes according to their approproate relationships\n",
     "* Create instance and class methods that leverage the has many through relationships"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "guest_1 = Guest(\"Dwight Schrute\")\n",
+    "guest_2 = Guest(\"Michael Scott\")\n",
+    "guest_3 = Guest(\"Pam Beasley\")\n",
+    "\n",
+    "dinner_party_1 = DinnerParty(\"Office Christmas Party\")\n",
+    "dinner_party_2 = DinnerParty(\"Your parent's friend's\")\n",
+    "dinner_party_3 = DinnerParty(\"Friend's House Warming\")\n",
+    "\n",
+    "invite_1 = Invite(dinner_party_1, guest_1)\n",
+    "invite_2 = Invite(dinner_party_1, guest_2)\n",
+    "invite_3 = Invite(dinner_party_1, guest_3)\n",
+    "invite_4 = Invite(dinner_party_2, guest_1)\n",
+    "invite_5 = Invite(dinner_party_3, guest_1)\n",
+    "\n",
+    "recipe_1 = Recipe(\"Disaster\")\n",
+    "recipe_2 = Recipe(\"Punch\")\n",
+    "recipe_3 = Recipe(\"Cookies\")\n",
+    "recipe_4 = Recipe(\"Punch\")\n",
+    "recipe_5 = Recipe(\"Cookies\")\n",
+    "recipe_6 = Recipe(\"Punch\")\n",
+    "\n",
+    "course_1 = Course(dinner_party_1, recipe_1)\n",
+    "course_2 = Course(dinner_party_1, recipe_2)\n",
+    "course_3 = Course(dinner_party_1, recipe_3)\n",
+    "course_4 = Course(dinner_party_1, recipe_4)\n",
+    "course_5 = Course(dinner_party_2, recipe_5)\n",
+    "course_6 = Course(dinner_party_2, recipe_6)\n",
+    "course_7 = Course(dinner_party_2, recipe_2)\n",
+    "\n",
+    "review_1 = Review(guest_1, recipe_1, 3, \"the Disaster wasn't as bad as I would've liked\")\n",
+    "review_2 = Review(guest_2, recipe_1, 5, \"It was total chaos, exceeded expectations\")\n",
+    "review_3 = Review(guest_3, recipe_1, 4, \"Just disastrous, nothing more\")\n",
+    "review_4 = Review(guest_1, recipe_2, 2, \"way too much pineapple juice!\")\n",
+    "review_5 = Review(guest_2, recipe_2, 2, \"not enough pineapple juice!\")\n",
+    "review_6 = Review(guest_3, recipe_2, 3, \"right amount of pineapple juice, but wasn't anything to write home about\")\n",
+    "review_7 = Review(guest_1, recipe_3, 2, \"I don't like cookies, that's all.\")\n",
+    "review_8 = Review(guest_2, recipe_1, 4, \"Pretty disastrous, nothing more\")\n",
+    "review_9 = Review(guest_3, recipe_1, 4, \"Meh, I've seen more bedlam\")\n",
+    "review_10 = Review(guest_1, recipe_4, 1, \"It was more of a slap in the face\")"
    ]
   },
   {
@@ -50,6 +123,92 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<guest.Guest at 0x10cc9cfd0>,\n",
+       " <guest.Guest at 0x10cc9cf98>,\n",
+       " <guest.Guest at 0x10cc94048>]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Guest._all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<invite.Invite at 0x10cc94128>,\n",
+       " <invite.Invite at 0x10cc941d0>,\n",
+       " <invite.Invite at 0x10cc94208>]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "guest_1.invites()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<review.Review at 0x10cc94588>,\n",
+       " <review.Review at 0x10cc94668>,\n",
+       " <review.Review at 0x10cc94710>]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "guest_2.reviews()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<recipe.Recipe at 0x10cc94240>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "guest_1.favorite_recipe()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -61,6 +220,30 @@
     "* `invite.accepted` returns a boolean value (true or false) for whether the the guest accepted the invite or not\n",
     "* `invite.guest` returns the given invite's guest instance\n",
     "* `invite.dinner_party` returns the given invite's dinner party instance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<invite.Invite at 0x10cc94128>,\n",
+       " <invite.Invite at 0x10cc94160>,\n",
+       " <invite.Invite at 0x10cc94198>,\n",
+       " <invite.Invite at 0x10cc941d0>,\n",
+       " <invite.Invite at 0x10cc94208>]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Invite._all"
    ]
   },
   {
@@ -83,6 +266,88 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "guest_1.rsvp(invite_1, True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Invite._all[0].guest._rsvp_status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<guest.Guest at 0x10cc9cfd0>,\n",
+       " <guest.Guest at 0x10cc9cf98>,\n",
+       " <guest.Guest at 0x10cc94048>]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dinner_party_1.guests()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<recipe.Recipe at 0x10cc94240>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dinner_party_1.highest_rated_recipe()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -93,6 +358,26 @@
     "**Instance Methods:**\n",
     "* `course.dinner_party` returns the dinner party instance for the given course\n",
     "* `course.recipe` returns the recpipe instance for the given course"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<dinnerparty.DinnerParty at 0x10cc94080>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "course_2.dinner_party"
    ]
   },
   {
@@ -111,6 +396,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<recipe.Recipe at 0x10cc94278>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Review._all[3].recipe"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -123,6 +428,79 @@
     "**Instance Methods:**\n",
     "* `recipe.reviews()` returns a list of reviews for the given recipe\n",
     "* `recipe.top_five_reviews()` returns a list with the five review instances with the highest rating for the given recipe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<recipe.Recipe at 0x10cc94240>,\n",
+       " <recipe.Recipe at 0x10cc94278>,\n",
+       " <recipe.Recipe at 0x10cc942b0>,\n",
+       " <recipe.Recipe at 0x10cc942e8>,\n",
+       " <recipe.Recipe at 0x10cc94320>,\n",
+       " <recipe.Recipe at 0x10cc94358>]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Recipe._all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<recipe.Recipe at 0x10cc94240>,\n",
+       " <recipe.Recipe at 0x10cc94278>,\n",
+       " <recipe.Recipe at 0x10cc942b0>]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Recipe.top_three()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<review.Review at 0x10cc94588>,\n",
+       " <review.Review at 0x10cc945f8>,\n",
+       " <review.Review at 0x10cc94710>,\n",
+       " <review.Review at 0x10cc94748>,\n",
+       " <review.Review at 0x10cc94518>]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recipe_1.top_five_reviews()"
    ]
   },
   {
@@ -156,7 +534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
