--- a/index.ipynb
+++ b/index.ipynb
@@ -130,9 +130,9 @@
     {
      "data": {
       "text/plain": [
-       "[<guest.Guest at 0x10cc9cfd0>,\n",
-       " <guest.Guest at 0x10cc9cf98>,\n",
-       " <guest.Guest at 0x10cc94048>]"
+       "[<guest.Guest at 0x10f130208>,\n",
+       " <guest.Guest at 0x10f1301d0>,\n",
+       " <guest.Guest at 0x10f130240>]"
       ]
      },
      "execution_count": 4,
@@ -152,9 +152,9 @@
     {
      "data": {
       "text/plain": [
-       "[<invite.Invite at 0x10cc94128>,\n",
-       " <invite.Invite at 0x10cc941d0>,\n",
-       " <invite.Invite at 0x10cc94208>]"
+       "[<invite.Invite at 0x10f130320>,\n",
+       " <invite.Invite at 0x10f1303c8>,\n",
+       " <invite.Invite at 0x10f130400>]"
       ]
      },
      "execution_count": 5,
@@ -174,9 +174,9 @@
     {
      "data": {
       "text/plain": [
-       "[<review.Review at 0x10cc94588>,\n",
-       " <review.Review at 0x10cc94668>,\n",
-       " <review.Review at 0x10cc94710>]"
+       "[<review.Review at 0x10f130780>,\n",
+       " <review.Review at 0x10f130860>,\n",
+       " <review.Review at 0x10f130908>]"
       ]
      },
      "execution_count": 6,
@@ -196,7 +196,7 @@
     {
      "data": {
       "text/plain": [
-       "<recipe.Recipe at 0x10cc94240>"
+       "<recipe.Recipe at 0x10f130438>"
       ]
      },
      "execution_count": 7,
@@ -224,26 +224,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<invite.Invite at 0x10cc94128>,\n",
-       " <invite.Invite at 0x10cc94160>,\n",
-       " <invite.Invite at 0x10cc94198>,\n",
-       " <invite.Invite at 0x10cc941d0>,\n",
-       " <invite.Invite at 0x10cc94208>]"
+       "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "guest_3.rsvp(invite_3, True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Invite._all[2]._rsvp_status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "invite_3._rsvp_status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "invite_3.accepted()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<invite.Invite at 0x10f130320>,\n",
+       " <invite.Invite at 0x10f130358>,\n",
+       " <invite.Invite at 0x10f130390>,\n",
+       " <invite.Invite at 0x10f1303c8>,\n",
+       " <invite.Invite at 0x10f130400>]"
+      ]
+     },
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Invite._all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<guest.Guest at 0x10f130208>,\n",
+       " <guest.Guest at 0x10f1301d0>,\n",
+       " <guest.Guest at 0x10f130240>]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dinner_party_1.guests()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<recipe.Recipe at 0x10f130438>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dinner_party_1.highest_rated_recipe()"
    ]
   },
   {
@@ -266,88 +390,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "guest_1.rsvp(invite_1, True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Invite._all[0].guest._rsvp_status"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<guest.Guest at 0x10cc9cfd0>,\n",
-       " <guest.Guest at 0x10cc9cf98>,\n",
-       " <guest.Guest at 0x10cc94048>]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dinner_party_1.guests()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<recipe.Recipe at 0x10cc94240>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dinner_party_1.highest_rated_recipe()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -362,16 +404,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<dinnerparty.DinnerParty at 0x10cc94080>"
+       "<dinnerparty.DinnerParty at 0x10f130278>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,16 +439,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<recipe.Recipe at 0x10cc94278>"
+       "<recipe.Recipe at 0x10f130470>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,21 +474,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<recipe.Recipe at 0x10cc94240>,\n",
-       " <recipe.Recipe at 0x10cc94278>,\n",
-       " <recipe.Recipe at 0x10cc942b0>,\n",
-       " <recipe.Recipe at 0x10cc942e8>,\n",
-       " <recipe.Recipe at 0x10cc94320>,\n",
-       " <recipe.Recipe at 0x10cc94358>]"
+       "[<recipe.Recipe at 0x10f130438>,\n",
+       " <recipe.Recipe at 0x10f130470>,\n",
+       " <recipe.Recipe at 0x10f1304a8>,\n",
+       " <recipe.Recipe at 0x10f1304e0>,\n",
+       " <recipe.Recipe at 0x10f130518>,\n",
+       " <recipe.Recipe at 0x10f130550>]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -465,12 +507,12 @@
     {
      "data": {
       "text/plain": [
-       "[<recipe.Recipe at 0x10cc94240>,\n",
-       " <recipe.Recipe at 0x10cc94278>,\n",
-       " <recipe.Recipe at 0x10cc942b0>]"
+       "[<recipe.Recipe at 0x10f130438>,\n",
+       " <recipe.Recipe at 0x10f130470>,\n",
+       " <recipe.Recipe at 0x10f1304a8>]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,20 +523,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<review.Review at 0x10cc94588>,\n",
-       " <review.Review at 0x10cc945f8>,\n",
-       " <review.Review at 0x10cc94710>,\n",
-       " <review.Review at 0x10cc94748>,\n",
-       " <review.Review at 0x10cc94518>]"
+       "[<review.Review at 0x10f130780>,\n",
+       " <review.Review at 0x10f1307f0>,\n",
+       " <review.Review at 0x10f130908>,\n",
+       " <review.Review at 0x10f130940>,\n",
+       " <review.Review at 0x10f130710>]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
