--- a/index.ipynb
+++ b/index.ipynb
@@ -67,9 +67,9 @@
     "dinner_party_2 = DinnerParty(\"Your parent's friend's\")\n",
     "dinner_party_3 = DinnerParty(\"Friend's House Warming\")\n",
     "\n",
-    "invite_1 = Invite(dinner_party_1, guest_1)\n",
-    "invite_2 = Invite(dinner_party_1, guest_2)\n",
-    "invite_3 = Invite(dinner_party_1, guest_3)\n",
+    "invite_1 = Invite(dinner_party_1, guest_1, True)\n",
+    "invite_2 = Invite(dinner_party_1, guest_2, False)\n",
+    "invite_3 = Invite(dinner_party_1, guest_3, True)\n",
     "invite_4 = Invite(dinner_party_2, guest_1)\n",
     "invite_5 = Invite(dinner_party_3, guest_1)\n",
     "\n",
@@ -130,9 +130,9 @@
     {
      "data": {
       "text/plain": [
-       "[<guest.Guest at 0x10f130208>,\n",
-       " <guest.Guest at 0x10f1301d0>,\n",
-       " <guest.Guest at 0x10f130240>]"
+       "[<guest.Guest at 0x107d9e1d0>,\n",
+       " <guest.Guest at 0x107d9e198>,\n",
+       " <guest.Guest at 0x107d9e208>]"
       ]
      },
      "execution_count": 4,
@@ -152,9 +152,9 @@
     {
      "data": {
       "text/plain": [
-       "[<invite.Invite at 0x10f130320>,\n",
-       " <invite.Invite at 0x10f1303c8>,\n",
-       " <invite.Invite at 0x10f130400>]"
+       "[<invite.Invite at 0x107d9e2e8>,\n",
+       " <invite.Invite at 0x107d9e400>,\n",
+       " <invite.Invite at 0x107d9e390>]"
       ]
      },
      "execution_count": 5,
@@ -174,9 +174,9 @@
     {
      "data": {
       "text/plain": [
-       "[<review.Review at 0x10f130780>,\n",
-       " <review.Review at 0x10f130860>,\n",
-       " <review.Review at 0x10f130908>]"
+       "[<review.Review at 0x107d9e748>,\n",
+       " <review.Review at 0x107d9e828>,\n",
+       " <review.Review at 0x107d9e8d0>]"
       ]
      },
      "execution_count": 6,
@@ -196,7 +196,7 @@
     {
      "data": {
       "text/plain": [
-       "<recipe.Recipe at 0x10f130438>"
+       "<recipe.Recipe at 0x107d9e320>"
       ]
      },
      "execution_count": 7,
@@ -224,27 +224,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "guest_3.rsvp(invite_3, True)"
+    "#guest_1.rsvp(invite_1, True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +242,7 @@
        "True"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +262,7 @@
        "True"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -293,31 +282,31 @@
        "True"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "invite_3.accepted()"
+    "invite_3.accepted"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<invite.Invite at 0x10f130320>,\n",
-       " <invite.Invite at 0x10f130358>,\n",
-       " <invite.Invite at 0x10f130390>,\n",
-       " <invite.Invite at 0x10f1303c8>,\n",
-       " <invite.Invite at 0x10f130400>]"
+       "[<invite.Invite at 0x107d9e2e8>,\n",
+       " <invite.Invite at 0x107d9e358>,\n",
+       " <invite.Invite at 0x107d9e3c8>,\n",
+       " <invite.Invite at 0x107d9e400>,\n",
+       " <invite.Invite at 0x107d9e390>]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,18 +317,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<guest.Guest at 0x10f130208>,\n",
-       " <guest.Guest at 0x10f1301d0>,\n",
-       " <guest.Guest at 0x10f130240>]"
+       "[<guest.Guest at 0x107d9e1d0>, <guest.Guest at 0x107d9e208>]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +345,7 @@
     {
      "data": {
       "text/plain": [
-       "<recipe.Recipe at 0x10f130438>"
+       "<recipe.Recipe at 0x107d9e320>"
       ]
      },
      "execution_count": 14,
@@ -410,7 +397,7 @@
     {
      "data": {
       "text/plain": [
-       "<dinnerparty.DinnerParty at 0x10f130278>"
+       "<dinnerparty.DinnerParty at 0x107d9e240>"
       ]
      },
      "execution_count": 15,
@@ -445,7 +432,7 @@
     {
      "data": {
       "text/plain": [
-       "<recipe.Recipe at 0x10f130470>"
+       "<recipe.Recipe at 0x107d9e438>"
       ]
      },
      "execution_count": 16,
@@ -480,12 +467,12 @@
     {
      "data": {
       "text/plain": [
-       "[<recipe.Recipe at 0x10f130438>,\n",
-       " <recipe.Recipe at 0x10f130470>,\n",
-       " <recipe.Recipe at 0x10f1304a8>,\n",
-       " <recipe.Recipe at 0x10f1304e0>,\n",
-       " <recipe.Recipe at 0x10f130518>,\n",
-       " <recipe.Recipe at 0x10f130550>]"
+       "[<recipe.Recipe at 0x107d9e320>,\n",
+       " <recipe.Recipe at 0x107d9e438>,\n",
+       " <recipe.Recipe at 0x107d9e470>,\n",
+       " <recipe.Recipe at 0x107d9e4a8>,\n",
+       " <recipe.Recipe at 0x107d9e4e0>,\n",
+       " <recipe.Recipe at 0x107d9e518>]"
       ]
      },
      "execution_count": 17,
@@ -507,9 +494,9 @@
     {
      "data": {
       "text/plain": [
-       "[<recipe.Recipe at 0x10f130438>,\n",
-       " <recipe.Recipe at 0x10f130470>,\n",
-       " <recipe.Recipe at 0x10f1304a8>]"
+       "[<recipe.Recipe at 0x107d9e320>,\n",
+       " <recipe.Recipe at 0x107d9e438>,\n",
+       " <recipe.Recipe at 0x107d9e470>]"
       ]
      },
      "execution_count": 18,
@@ -529,11 +516,11 @@
     {
      "data": {
       "text/plain": [
-       "[<review.Review at 0x10f130780>,\n",
-       " <review.Review at 0x10f1307f0>,\n",
-       " <review.Review at 0x10f130908>,\n",
-       " <review.Review at 0x10f130940>,\n",
-       " <review.Review at 0x10f130710>]"
+       "[<review.Review at 0x107d9e748>,\n",
+       " <review.Review at 0x107d9e7b8>,\n",
+       " <review.Review at 0x107d9e8d0>,\n",
+       " <review.Review at 0x107d9e908>,\n",
+       " <review.Review at 0x107d9e6d8>]"
       ]
      },
      "execution_count": 19,
